Added some minor changes
